внёс изменения в requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.7.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
+Deprecated==1.2.14
+distro==1.8.0
 Django==4.2.2
 idna==3.4
+netaddr==0.8.0
 Pillow==9.5.0
 psycopg2==2.9.6
 requests==2.31.0
 sqlparse==0.4.4
 tzdata==2023.3
 urllib3==2.0.3
+wrapt==1.15.0
+yookassa==2.4.0
